# calaga

./: .gitignore  CMakeLists.txt  README.md
.ProjectFiles/gimp/: asteroid.xcf  beader.xcf  dagger.xcf  enemies.xcf  tshot.xcf
include/: audio.h  defs.h  draw.h  enemies.h  events.h  field.h  font.h  game.h  generator.h  player.h  projectile.h  scores.h  ui.h
src/: audio.c  audio.h  defs.h  draw.c  draw.h  enemies.c  enemies.h  events.c  field.c  field.h  font.c  font.h  game.c  game.h  generator.c  generator.h  main.c  player.c  player.h  projectile.c  projectile.h  renderer.c  renderer.h  scores.c  ui.c  window.c  window.h
